--- a/src/app/main-menu/main-menu.component.html
+++ b/src/app/main-menu/main-menu.component.html
@@ -16,7 +16,7 @@
   <div id="main-menu" class="main-menu collapse navbar-collapse">
     <ul class="nav navbar-nav">
       <li class="active">
-        <a href="index.html">
+        <a routerLink="/dashboard" href="index.html">
           <i class="menu-icon fa fa-dashboard"></i>Dashboard </a>
       </li>
       <h3 class="menu-title">UI elements</h3>
